Punto 1.09 Confirmar cambios de ficheros

--- a/a_gato.html
+++ b/a_gato.html
@@ -9,7 +9,7 @@
     <!-- Bloque de header -->
     <header>
       <div id="topHeader">
-        <a href="../index.html">
+        <a href="#">
           <div class="logo">
             <img
               src="recursos/DIW_LogoHuellaA.png"
@@ -25,10 +25,10 @@
           <nav>
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
-              <li><a href="a_perro.html">Perros</a></li>
+              <li><a href="#">Perros</a></li>
               <li><a href="a_gato.html">Gatos</a></li>
-              <li><a href="a_otros.html">Otros</a></li>
-              <li><a href="a_contacto.html">Contacto</a></li>
+              <li><a href="#">Otros</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
           </nav>
         </div>
@@ -90,10 +90,10 @@
           <nav>
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
-              <li><a href="a_perro.html">Perros</a></li>
+              <li><a href="#">Perros</a></li>
               <li><a href="a_gato.html">Gatos</a></li>
-              <li><a href="a_otros.html">Otros</a></li>
-              <li><a href="a_contacto.html">Contacto</a></li>
+              <li><a href="#">Otros</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
           </nav>
         </div>
