--- a/a_index.html
+++ b/a_index.html
@@ -2,14 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>DIW Mascotas&Co</title>
+    <title>Proyecto-git DAW</title>
+	<meta name="author" content="Carolina Medina Llorente">
     <link rel="stylesheet" href="css/alimentacion.css" />
   </head>
   <body>
     <!-- Bloque de header -->
     <header>
       <div id="topHeader">
-        <a href="../index.html">
+        <a href="#">
           <div class="logo">
             <img
               src="recursos/DIW_LogoHuellaA.png"
@@ -25,10 +26,10 @@
           <nav>
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
-              <li><a href="a_perro.html">Perros</a></li>
+              <li><a href="#">Perros</a></li>
               <li><a href="a_gato.html">Gatos</a></li>
-              <li><a href="a_otros.html">Otros</a></li>
-              <li><a href="a_contacto.html">Contacto</a></li>
+              <li><a href="#">Otros</a></li>
+              <li><a href="#">Contacto</a></li>
             </ul>
           </nav>
         </div>
@@ -41,7 +42,7 @@
     <!-- Contenido de la página -->
     <div class="contenido">
       <div id="grid1">
-        <a href="a_perro.html">
+        <a href="#">
           <div>
             <img class="imgEnlace" src="recursos/puppy-450.png" alt="PERROS" />
             <h2 class="h2Enlace">PERROS</h2>
@@ -57,7 +58,7 @@
         </a>
       </div>
       <div id="grid3">
-        <a href="a_otros.html">
+        <a href="#">
           <div>
             <img class="imgEnlace" src="recursos/parrot-450.png" alt="OTROS" />
             <h2 class="h2Enlace">OTROS</h2>
@@ -100,10 +101,10 @@
           <nav>
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
-              <li><a href="a_perro.html">Perros</a></li>
+              <li><a href="#">Perros</a></li>
               <li><a href="a_gato.html">Gatos</a></li>
-              <li><a href="a_otros.html">Otros</a></li>
-              <li><a href="a_contacto.html">Contacto</a></li>
+              <li><a href="#">Otros</a></li>
+              <li><a href="#.html">Contacto</a></li>
             </ul>
           </nav>
         </div>
