a_index.html cambiado title

--- a/a_index.html
+++ b/a_index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Proyecto-git DAW</title>
+    <title>Proyecto-git DAW 2.03</title>
 	<meta name="author" content="Carolina Medina Llorente">
     <link rel="stylesheet" href="css/alimentacion.css" />
   </head>
