enlaces actualizados en a_index.html 2.10

--- a/a_index.html
+++ b/a_index.html
@@ -27,7 +27,7 @@
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
               <li><a href="#">Perros</a></li>
-              <li><a href="a_gato.html">Gatos</a></li>
+              <li><a href="articulo.html">Git</a></li>
               <li><a href="#">Otros</a></li>
               <li><a href="#">Contacto</a></li>
             </ul>
@@ -50,10 +50,10 @@
         </a>
       </div>
       <div id="grid2">
-        <a href="a_gato.html">
+        <a href="articulo.html">
           <div>
             <img class="imgEnlace" src="recursos/kitty-450.png" alt="GATOS" />
-            <h2 class="h2Enlace">GATOS</h2>
+            <h2 class="h2Enlace">GIT</h2>
           </div>
         </a>
       </div>
@@ -102,7 +102,7 @@
             <ul>
               <li><a href="a_index.html">Inicio</a></li>
               <li><a href="#">Perros</a></li>
-              <li><a href="a_gato.html">Gatos</a></li>
+              <li><a href="articulo.html">Git</a></li>
               <li><a href="#">Otros</a></li>
               <li><a href="#.html">Contacto</a></li>
             </ul>
