--- a/a_gato.html
+++ b/a_gato.html
@@ -113,7 +113,7 @@
             </li>
           </ul>
           <p>
-            Copyright Diseño de Interfaces Web @ La Laboral 2021 - todos los
+            Copyright Despliegue de Aplicaciones Web @ La Laboral 2021 - todos los
             derechos reservados
           </p>
         </div>
