--- a/a_gato.html
+++ b/a_gato.html
@@ -113,8 +113,7 @@
             </li>
           </ul>
           <p>
-            Copyright Diseño de Interfaces Web @ La Laboral 2021 - todos los
-            derechos reservados
+            Copyright DAW @ La Laboral 2021 - todos los derechos reservados
           </p>
         </div>
       </div>
