Update a_gato.html fork

--- a/a_gato.html
+++ b/a_gato.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Proyecto git - 1.12</title>
+    <title>Proyecto git - Fork y Pull request</title>
     <link rel="stylesheet" href="css/alimentacionTienda.css" />
   </head>
   <body>
